# software-designer-api

./: Makefile  README.md  pyproject.toml  requirements.txt
src/: api.py  common.py  logics.py  main.py
