[project]
name = "software-designer-api"
version = "0.1.0"
description = ""
authors = [{ name = "BioCrossCoder", email = "viscaria_dignics@163.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = ["fastapi (>=0.115.8,<0.116.0)", "langchain (>=0.3.17,<0.4.0)", "langchain-community (>=0.3.16,<0.4.0)", "dashscope (>=1.22.1,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.0"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"

